- TDSC decoder
- DTS lossless extension (XLL) decoding (not lossless, disabled by default)
- Intel QSV-accelerated H.264 encoding
- MMAL-accelerated H.264 decoding
- DTS decoding through libdcadec
- Canopus HQ/HQA decoder
- Automatically rotate videos based on metadata in avconv
- improved Quickdraw compatibility
- NVIDIA NVENC-accelerated H.264 and HEVC encoding support


version 11:
- libx265 encoder
- shuffleplanes filter
- replaygain data export
- Alias PIX image encoder and decoder
- BRender PIX image decoder
- Amazing Studio PAF playback support
- XBM decoder
- BMP standalone parser
- OpenEXR image decoder
- support encoding and decoding 4-channel SGI images
- support decoding 16-bit RLE SGI images
- VP7 video decoder
- LucasArts SMUSH SANM video decoder
- LucasArts SMUSH VIMA audio decoder (ADPCM)
- LucasArts SMUSH demuxer
- MP2 encoding via TwoLAME
- asettb filter
- Silicon Graphics RLE 8-bit video decoder
- Silicon Graphics Motion Video Compressor 1 & 2 decoder
- Silicon Graphics Movie demuxer
- On2 AVC (Audio for Video) decoder
- support for decoding through DXVA2 in avconv
- libbs2b-based stereo-to-binaural audio filter
- native Opus decoder
- display matrix export and rotation API
- drop avserver, it was unmaintained for years and largely broken
- Icecast protocol
- request Icecast metadata by default
- support for using metadata in stream specifiers in avtools
- Matroska 3D support


version 10:
- av_strnstr
- support ID3v2 tags in ASF files
- reference-counting for AVFrame and AVPacket data
- avconv now fails when input options are used for output file
  or vice versa
- avconv options -filter_script and -filter_complex_script, which allow a
  filtergraph description to be read from a file
- uniform options syntax across all filters
- interlace filter
- JPEG 2000 decoder
- asetpts filter (same as setpts, but for audio)
- trim and atrim filters
- avconv -t and -ss (output-only) options are now sample-accurate when
  transcoding audio